--- a/sample.html
+++ b/sample.html
@@ -44,6 +44,12 @@
 	    <div>This is a div</div>
 	    <p>This is a paragraph</p>
 	    <div>This is another div</div>
+	
+	
+			<b>This text is also bold.</b>
+			<strong>This text is bold,</strong>
+			<em>This text is italic</em>
+			<i>This text is also italic</i>
 	    
 
 	    
