--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 			<strong>This text is bold,</strong>
 			<em>This text is italic</em>
 			<i>This text is also italic</i>
-	    
-
+	    <p>This part is in <b>bold</b>. This part is in<i>italic.</i></p>
+	    <p>This part is both in <b><i>bold and italic</i></b></p>
 	    
 </body>
 
