--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 			<i>This text is also italic</i>
 	    <p>This part is in <b>bold</b>. This part is in<i>italic.</i></p>
 	    <p>This part is both in <b><i>bold and italic</i></b></p>
+	    <u>This text is underlined</u>
+	    <del>this text is striked through</del>
 	    
 </body>
 
