--- a/index.html
+++ b/index.html
@@ -50,10 +50,19 @@
 			<strong>This text is bold,</strong>
 			<em>This text is italic</em>
 			<i>This text is also italic</i>
-	    <p>This part is in <b>bold</b>. This part is in<i>italic.</i></p>
-	    <p>This part is both in <b><i>bold and italic</i></b></p>
-	    <u>This text is underlined</u>
-	    <del>this text is striked through</del>
+			    <p>This part is in <b>bold</b>. This part is in<i>italic.</i></p>
+			    <p>This part is both in <b><i>bold and italic</i></b></p>
+			    <u>This text is underlined</u>
+			    <del>this text is striked through</del>
+	          	    <p>The date is August <del>20</del>21</p>
+	    <div>This is a div.</div>
+	    <br>
+	    <div>This is another div.</div>
+
+	    <div>This is a div.</div>
+	    <hr>
+	    <div>This is another div.</div>
+	    		
 	    
 </body>
 
