--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	    <div>This is a div.</div>
 	    <hr>
 	    <div>This is another div.</div>
-		<img Jungwon="jw.jpg" alt="Jungwon!!" width="150px" height="150px"
+		<img Jungwon="jw.jpg" alt="Jungwon!!" width="150px" height="150px" title="He is a CAT"
 	    		
 	    
 </body>
