--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	    <hr>
 	    <div>This is another div.</div>
 	    
-		<img src="jw.jpg" alt="Jungwon the cat!!" width="150px" height="150px"
+		<img src="jw.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
 </body>
 
   </html>	
