--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
 	    <div>This is a div.</div>
 	    <hr>
 	    <div>This is another div.</div>
+
+	    	<h1>𝙻𝚎𝚊𝚍𝚎𝚛 𝚘𝚏 𝙴𝙽-</h1>
 	    
 		<img src="jw.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
+	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?</a>
 </body>
 
   </html>	
