--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
 	    
 		<img src="jw.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
 	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?</a>
-	   	<a href="MYBB.jpg">HIM <3?</a>
+	<div>
+		<a href="MYBB.jpg">HIM <3?</a>
+	</div>
+	   	
 </body>
 
   </html>	
