--- a/index.html
+++ b/index.html
@@ -69,10 +69,16 @@
 
 	    <hr>
 	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?</a>
-	<div>
+	<p>
 		<a href="MYBB.jpg">HIM <3?</a>
+	
+        <div>
+		<a href="ILH.jpg">HIM <3?</a>
 	</div>
-	   	
+	<div>
+		<a href="GRABE.jpg">HIM <3?</a>
+	</div>
+	</p> 	
 </body>
 
   </html>	
