--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@
 	    <hr>
 	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?</a>
 	<p>
+	<div>
 		<a href="MYBB.jpg">HIM <3?</a>
-	
-        <div>
+        </div>
+	<div>
 		<a href="ILH.jpg">HIM <3?</a>
 	</div>
 	<div>
