--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?</a>
 	<p>
 	<div>
-		<a href="MYBB.jpg">HIM <3?</a>
+		<a href="MYBB.jpg">HIM <3</a>
         </div>
 	<div>
-		<a href="ILH.jpg">HIM <3?</a>
+		<a href="ILH.jpg">❥</a>
 	</div>
 	<div>
-		<a href="GRABE.jpg">HIM <3?</a>
+		<a href="GRABE.jpg">💘</a>
 	</div>
 	</p> 	
 </body>
