--- a/index.html
+++ b/index.html
@@ -66,6 +66,22 @@
 	    	<h1>𝙻𝚎𝚊𝚍𝚎𝚛 𝚘𝚏 𝙴𝙽-</h1>
 	    
 		<img src="jw.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
+	    <p>
+	    	<img src="ki.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
+	    </p> 
+	     <hr>
+	    <p>
+	    	<img src="mi.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
+	    </p> 
+	     <hr>
+	    <p>
+	        <img src="na.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
+	    </p>
+	     <hr>
+	    <p>
+	        <img src="to.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
+	    </p>
+	    	<img src="re.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
 
 	    <hr>
 	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?</a>
