--- a/sample2.html
+++ b/sample2.html
@@ -11,9 +11,9 @@
 
     </head>
     <body>
-			<table style="border: 1px solid black"> 
+			<table style="border: 1px solid black;"> 
 		<tr>
-			<td> style="border: 1px solid black">Row 1, Column 1</td>
+			<td> style="border-style: 1px solid black">Row 1, Column 1</td>
 			<td>Row 1, column 2</td>
 		</tr>
 		<tr>
