--- a/sample2.html
+++ b/sample2.html
@@ -13,12 +13,16 @@
     <body>
 			<table style="border: 1px solid black;"> 
 		<tr>
-			<td> style="border-style: 1px solid black">Row 1, Column 1</td>
-			<td>Row 1, column 2</td>
+			<th> style="border-style: 1px solid black">Header 1</th>
+			<th>style="border-style: 1px solid black">Header 2</th>
 		</tr>
 		<tr>
-			<td>Row 2, Column 1</td>
-			<td>Row 2, Column 2</td>
+			<td> style="border-style: 1px solid black">Row 1, Column 1</td>
+			<td>style="border-style: 1px solid black">Row 1, Column 1</td>
+		</tr>
+		<tr>
+			<td>style="border-style: 1px solid black">Row 1, Column 1</td>
+			<td>style="border-style: 1px solid black">Row 1, Column 12</td>
 		</tr>
 
 
