--- a/sample2.html
+++ b/sample2.html
@@ -12,6 +12,7 @@
     </head>
     <body>
 			<table style="border: 1px solid black;"> 
+			     <caption> This is a table</caption>
 		<tr>
 			<th> style="border-style: 1px solid black">Header 1</th>
 			<th>style="border-style: 1px solid black">Header 2</th>
