--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
 	    	<img src="re.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
             
 	    <hr>
-	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?>
-			<img src="re.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
-		</a>
+	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?></a>
 	<p>
 	<div>
 		<a href="MYBB.jpg">HIM <3</a>
