--- a/sample2.html
+++ b/sample2.html
@@ -14,16 +14,16 @@
 			<table style="border: 1px solid black;"> 
 			     <caption> This is a table</caption>
 		<tr>
-			<th> style="border-style: 1px solid black">Header 1</th>
-			<th>style="border-style: 1px solid black">Header 2</th>
+			<th style="border-style: 1px solid black">Header 1</th>
+			<th style="border-style: 1px solid black">Header 2</th>
 		</tr>
 		<tr>
-			<td> style="border-style: 1px solid black">Row 1, Column 1</td>
-			<td>style="border-style: 1px solid black">Row 1, Column 1</td>
+			<td style="border-style: 1px solid black">Row 1, Column 1</td>
+			<td style="border-style: 1px solid black">Row 1, Column 1</td>
 		</tr>
 		<tr>
-			<td>style="border-style: 1px solid black">Row 1, Column 1</td>
-			<td>style="border-style: 1px solid black">Row 1, Column 12</td>
+			<td style="border-style: 1px solid black">Row 1, Column 1</td>
+			<td style="border-style: 1px solid black">Row 1, Column 12</td>
 		</tr>
 
 
