--- a/sample2.html
+++ b/sample2.html
@@ -14,16 +14,16 @@
 		<table style="border: 1px solid black; padding: 10px; border-collapse: separate;"> 
 			     <caption> This is a table</caption>
 		<tr>
-			<th style="border-style: 1px solid blackc; padding: 10px;">Header 1</th>
+			<th style="border: 1px solid blackc; padding: 10px;">Header 1</th>
 			<th style="border-style: 1px solid black; padding: 10px">Header 2</th>
 		</tr>
 		<tr>
-			<td style="border-style: 1px solid black; padding: 10px">Row 1, Column 1</td>
-			<td style="border-style: 1px solid black; padding: 10px">Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 10px">Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 10px">Row 1, Column 1</td>
 		</tr>
 		<tr>
-			<td style="border-style: 1px solid black; padding: 10px">Row 1, Column 1</td>
-			<td style="border-style: 1px solid black; padding: 10px">Row 1, Column 12</td>
+			<td style="border: 1px solid black; padding: 10px">Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 10px">Row 1, Column 12</td>
 		</tr>
 
 
