--- a/sample2.html
+++ b/sample2.html
@@ -11,10 +11,10 @@
 
     </head>
     <body>
-		<table style="border: 1px solid black; padding: 50px; border-collapse: separate;"> 
+		<table style="border: 1px solid black; padding: 50px 10px; border-collapse: separate;"> 
 			     <caption> This is a table</caption>
 		<tr>
-			<th style="border: 1px solid blackc; padding: 10px;">Header 1</th>
+			<th style="border: 1px solid black; padding: 10px;">Header 1</th>
 			<th style="border: 1px solid black; padding: 10px">Header 2</th>
 		</tr>
 		<tr>
