--- a/sample2.html
+++ b/sample2.html
@@ -11,19 +11,19 @@
 
     </head>
     <body>
-		<table style="border: 1px solid black; padding: 50px 20px 100px 0px; border-collapse: separate;"> 
+		<table style="border: 1px solid black; padding: 50px; border-collapse: separate;" background color:> 
 			     <caption> This is a table</caption>
 		<tr>
-			<th style="border: 1px solid black; padding: 10px;">Header 1</th>
-			<th style="border: 1px solid black; padding: 10px">Header 2</th>
+			<th style="border: 1px solid black; padding: 50px;">Header 1</th>
+			<th style="border: 1px solid black; padding: 50px">Header 2</th>
 		</tr>
 		<tr>
-			<td style="border: 1px solid black; padding: 10px">Row 1, Column 1</td>
-			<td style="border: 1px solid black; padding: 10px">Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 50px">Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 50px">Row 1, Column 1</td>
 		</tr>
 		<tr>
-			<td style="border: 1px solid black; padding: 10px">Row 1, Column 1</td>
-			<td style="border: 1px solid black; padding: 10px">Row 1, Column 12</td>
+			<td style="border: 1px solid black; padding: 50px">Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 50px">Row 1, Column 12</td>
 		</tr>
 
 
