--- a/sample2.html
+++ b/sample2.html
@@ -11,19 +11,19 @@
 
     </head>
     <body>
-		<table style="border: 1px solid black; padding: 50px; border-collapse: separate;" background color:> 
+		<table style="border: 1px solid black; padding: 50px; border-collapse: separate; width: 400px; height: 400px background color: #abaaa5;"> 
 			     <caption> This is a table</caption>
 		<tr>
-			<th style="border: 1px solid black; padding: 50px;">Header 1</th>
-			<th style="border: 1px solid black; padding: 50px">Header 2</th>
+			<th style="border: 1px solid black; padding: 50px; background color: #866b4e">Header 1</th>
+			<th style="border: 1px solid black; padding: 50px; background color: #a49782">Header 2</th>
 		</tr>
 		<tr>
-			<td style="border: 1px solid black; padding: 50px">Row 1, Column 1</td>
-			<td style="border: 1px solid black; padding: 50px">Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 50px; background color: #866b4e>Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 50px; background color: #a49782>Row 1, Column 1</td>
 		</tr>
 		<tr>
-			<td style="border: 1px solid black; padding: 50px">Row 1, Column 1</td>
-			<td style="border: 1px solid black; padding: 50px">Row 1, Column 12</td>
+			<td style="border: 1px solid black; padding: 50px; background color: #866b4e">Row 1, Column 1</td>
+			<td style="border: 1px solid black; padding: 50px; background color: #a49782">Row 1, Column 12</td>
 		</tr>
 
 
