--- a/index.html
+++ b/index.html
@@ -66,10 +66,7 @@
 	    	<h1>𝙻𝚎𝚊𝚍𝚎𝚛 𝚘𝚏 𝙴𝙽-</h1>
 	    
 		<img src="jw.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
-	    <hr>
-	    <p>
-	    	<img src="ki.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
-	    </p> 
+	    	<img jw.jpg="ki.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
 	     <hr>
 	    <p>
 	    	<img src="mi.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
