--- a/index.html
+++ b/index.html
@@ -66,19 +66,17 @@
 	    	<h1>𝙻𝚎𝚊𝚍𝚎𝚛 𝚘𝚏 𝙴𝙽-</h1>
 	    
 		<img src="mi.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
-	    	<img index.html="ki.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
+	    	<img src="ki.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
 	     <hr>
 	    <p>
 	        <img src="na.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
+		<img src="MYBB.jpg" alt="Jungwon the cat!!" width="150px" height="150px" title="He is a cat🐱!">
 	    </p>
 	     <hr>
 	   
 	    <hr>
 	        <a href="https://www.instagram.com/jungwon.enhypen/?hl=en">Want to learn more?></a>
-	<p>
-	<div>
-		<a href="MYBB.jpg">HIM <3</a>
-        </div>
+	
 	<div>
 		<a href="ILH.jpg">❥</a>
 	</div>
