--- a/table.html
+++ b/table.html
@@ -1,1 +1,38 @@
+<DOCTYPE html>
+  <html>
+    <head> 
+      <title>My first Webpage </title>
+      <meta charset="UTF-8">
+      <meta name="author" content="Perrett,Gisel Leyla Y.">
+      <meta name="keywords" content="HTML, CSS, JavaScript">
+      <meta name="revised" content="08-17-2024">
 
+      <link rel="icon" href-"icon.png" type="image/gif"
+
+    </head>
+    <body>
+      <table>
+        <colgroup>
+          <col span ="2" style="border: 1px solid black;">
+        </colgroup>
+        <tr>
+           <td style="border: 1px solid black;"> Data 1</td>
+           <td style="border: 1px solid black;"> Data 2</td>
+           <td style="border: 1px solid black;"> Data 3</td>
+        </tr>
+        <tr>
+           <td style="border: 1px solid black;"> Data 1</td>
+           <td style="border: 1px solid black;"> Data 2</td>
+        </tr>
+
+        <tr>
+           <td style="border: 1px solid black;"> Data 1</td>
+           <td style="border: 1px solid black;"> Data 2</td>
+           <td style="border: 1px solid black;"> Data 3</td>
+        </tr>
+
+
+        
+      </table>
+    </body>
+  </html>
