--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	    <div>This is a div.</div>
 	    <hr>
 	    <div>This is another div.</div>
-<a href = table.html> Tables</a>
+<a href = "table.html"> Tables</a>
 	    
 </body>
 
