--- a/table.html
+++ b/table.html
@@ -33,6 +33,28 @@
 
 
         
+
+          <colgroup>
+          <col span ="2" style="border: 1px solid black;">
+        </colgroup>
+        <tr>
+           <td style="border: 3px pink;"> Data 1</td>
+           <td style="border: 3px green;"> Data 2</td>
+           <td style="border: 3px #256c2e;"> Data 3</td>
+        </tr>
+        <tr>
+           <td style="border: 3px #3a256c;"> Data 1</td>
+           <td style="border: 3px #8eb05a;"> Data 2</td>
+           <td style="border: 3px #254d5c;"> Data 2</td>
+        </tr>
+
+        <tr>
+           <td style="border: 3px #6c4d25"> Data 1</td>
+           <td style="border: 3px #a11616;"> Data 2</td>
+           <td style="border: 3px #6aa116;"> Data 3</td>
+        </tr>
+
+        
       </table>
     </body>
   </html>
