--- a/table.html
+++ b/table.html
@@ -38,20 +38,20 @@
           <col span ="2" style="border: 1px solid black;">
         </colgroup>
         <tr>
-           <td style="border: 3px pink;"> Data 1</td>
-           <td style="border: 3px green;"> Data 2</td>
-           <td style="border: 3px #256c2e;"> Data 3</td>
+           <td style="border: 3px solid green;"> Data 1</td>
+           <td style="border: 3px solid pink;"> Data 2</td>
+           <td style="border: 3px solid cyan;"> Data 3</td>
         </tr>
         <tr>
-           <td style="border: 3px #3a256c;"> Data 1</td>
-           <td style="border: 3px #8eb05a;"> Data 2</td>
-           <td style="border: 3px #254d5c;"> Data 2</td>
+           <td style="border: 3px solid blue;"> Data 1</td>
+           <td style="border: 3px solid silver;"> Data 2</td>
+           <td style="border: 3px solid purple;"> Data 3</td>
         </tr>
 
         <tr>
-           <td style="border: 3px #6c4d25"> Data 1</td>
-           <td style="border: 3px #a11616;"> Data 2</td>
-           <td style="border: 3px #6aa116;"> Data 3</td>
+           <td style="border: 3px solid black;"> Data 1</td>
+           <td style="border: 3px solid yellow;"> Data 2</td>
+           <td style="border: 3px solid orange;"> Data 3</td>
         </tr>
 
         
