--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       <link rel="icon" href-"icon.png" type="image/gif"
 
     </head>
+	  <style> div{
+	background:pink;
+		}
+	  span{
+		  background: purple}
+	  </style>
     <body>
     <div>This is the first div.</div>
 	  <div>This is the second div.</div>
@@ -63,6 +69,7 @@
 	    <hr>
 	    <div>This is another div.</div>
 <a href = "table.html"> Tables</a>
+	   
 	    
 </body>
 
