--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
 	    <div>This is a div.</div>
 	    <hr>
 	    <div>This is another div.</div>
+	    <span>
+		    <div>I am inside a div!</div>
+	    </span>
 <a href = "table.html"> Tables</a>
 	   
 	    
