--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 	    <span>
 		    <div>I am inside a div!</div>
 	    </span>
+	    <div><span>I am inside a span!</span></div>
 <a href = "table.html"> Tables</a>
 	   
 	    
