--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     </head>
 	  <style> div{
-	background:pink;
+	background:violet;
 		}
 	  span{
-		  background: purple}
+		  background: pink}
 	  </style>
     <body>
     <div>This is the first div.</div>
