--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
 	    <span>
 		    <div>I am inside a div!</div>
 	    </span>
-	    <div><span>I am inside a span!</span></div>
+	    <!-- It will turn out pink and violet. Due to the span being a general inline element 
+	    where it wraps the text while div is a block element which take up the entirety of the webpage.--!>
+	    <div>
+		    <span>
+			    I am inside a span!<
+		   </span> 
+	    </div>
 <a href = "table.html"> Tables</a>
 	   
 	    
