--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		    <div>I am inside a div!</div>
 	    </span>
 	    <!-- It will turn out pink and violet. Due to the span being a general inline element 
-	    where it wraps the text while div is a block element which take up the entirety of the webpage.--!>
+	    where it wraps the text while div is a block element which take up the entirety of the webpage.-->
 	    <div>
 		    <span>
 			    I am inside a span!<
